--- a/Assets/SocketIt/Documentation/index.html
+++ b/Assets/SocketIt/Documentation/index.html
@@ -107,7 +107,8 @@
                     - Socket
 -->
             <p>
-                A <code>Module</code> needs to be aware of its <code>Sockets</code>. You have to add them to the <code>Sockets</code> property of the <code>Module</code>
+                A Module needs to be aware of its Sockets. You have to add them to the Sockets
+                property of the Module
             </p>
 
             <p class="alert alert-info" role="info">If you create a socket on a child element of a module, socketIt
@@ -115,9 +116,11 @@
             </p>
 
             <p>
-                If two <code>Modules</code> are connected, they form a <code>Composition</code>. A Module can only be part
-                of one <code>Composition</code> at a time. Even though a <code>Module</code> needs at least one <code>Socket</code>
-                to work properly, you are free to combine the <code>Socket</code> and <code>Module</code> component in one <code>GameObject</code>
+                If two Modules are connected, they form a Composition. A Module can only be
+                part
+                of one Composition at a time. Even though a Module needs at least one Socket
+                to work properly, you are free to combine the Socket and Module component in
+                one GameObject
             </p>
 
             <h4>Module Events</h4>
@@ -131,30 +134,73 @@
                 <tbody>
                 <tr>
                     <th scope="row">On Snap</th>
-                    <td>Fired whenever a <code>Socket</code> of another <code>Module</code>
-                        snaps to a <code>Socket</code> ot this Module.
+                    <td>Fired whenever a Socket of another Module
+                        snaps to a Socket ot this Module.
                     </td>
                 </tr>
                 <tr>
                     <th scope="row">On Module Connected</th>
-                    <td>Fired whenever a <code>Module</code> connects to another <code>Module</code>. </td>
+                    <td>Fired whenever a Module connects to another Module.</td>
                 </tr>
                 <tr>
                     <th scope="row">On Module Disconnected</th>
-                    <td>Fired whenever a <code>Module</code> gets disconnected from a connected <code>Module</code>. </td>
+                    <td>Fired whenever a Module gets disconnected from a connected Module.
+                    </td>
                 </tr>
                 <tr>
                     <th scope="row">On Composition Changed</th>
-                    <td>Fired whenever a <code>Module</code> gets separated from its <code>Composition</code>
-                    or when a <code>Composition</code> gets split in half and the <code>Module</code> is part of the new <code>Composition</code></td>
+                    <td>Fired whenever a Module gets separated from its Composition
+                        or when a Composition gets split in half and the Module is part of the
+                        new Composition</td>
                 </tr>
                 </tbody>
             </table>
 
-            <p class="alert alert-info" role="info">All <code>Module</code> events are mirrored to the other <code>Module</code>.
-                When two Module get connected, both will fire the <code>On Module Connect</code> event.
-                See the <code><a href="#connection">Connection</a></code> section for detailed information.
+            <p class="alert alert-info" role="info">All Module events are mirrored to the other Module.
+                When two Module get connected, both will fire the On Module Connect event.
+                See the <a href="#connection">Connection</a> section for detailed information.
             </p>
+
+            <h3 id="component-socket">Socket</h3>
+            <p class="">Sockets are the connection points of modules. A module must have at least one socket.
+            Each socket has to know about its module within its Module property</p>
+
+            <p class="alert alert-info" role="info">If you add a socket component under a GameObject with a module component,
+            the Module property of the Socket will be automatically filled</p>
+
+
+            <p class="">Sockets are the connection points of modules.</p>
+
+            <h4>Socket Events</h4>
+            <table class="table">
+                <thead class="thead-inverse">
+                <tr>
+                    <th>Event</th>
+                    <th>Type</th>
+                    <th>Description</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row">On Connect</th>
+                    <td>SocketEvent</td>
+                    <td>Fired when two sockets are connected.</td>
+                </tr>
+                <tr>
+                    <th scope="row">On Disconnect</th>
+                    <td>SocketEvent</td>
+                    <td>Fired when two sockets are disconnected.</td>
+                </tr>
+                <tr>
+                    <th scope="row">On Snap</th>
+                    <td>SnapEvent</td>
+                    <td>Fired when two sockets snap together.
+                        See <a href="snapping">snapping</a> for a detailed explanation
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+
 
             <h3 id="composition">Composition</h3>
             <p class="">Compositions
@@ -206,48 +252,63 @@
             <p class="">Copy the Editor folder from /SocketIt/Assets/Editor into your applications root directory.
                 This step is neccessary for Unity to activate the editor features.
             </p>
+
+
+            <h2 id="prefabs">Prefabs</h2>
+            <p class="">Copy the Editor folder from /SocketIt/Assets/Editor into your applications root directory.
+                This step is neccessary for Unity to activate the editor features.
+            </p>
+
+            <h4 id="prefab-composition">Composition</h4>
+            <p class="">Copy the Editor folder from /SocketIt/Assets/Editor into your applications root directory.
+                This step is neccessary for Unity to activate the editor features.
+            </p>
+
+            <h4 id="prefab-composition-manager">CompositionManager</h4>
+            <p class="">Copy the Editor folder from /SocketIt/Assets/Editor into your applications root directory.
+                This step is neccessary for Unity to activate the editor features.
+            </p>
+
+            <h2 id="getting-started">Getting Started</h2>
+            <p class="">Copy the Editor folder from /SocketIt/Assets/Editor into your applications root directory.
+                This step is neccessary for Unity to activate the editor features.
+            </p>
+
+            <h2 id="snapping">Snapping</h2>
+            <p class="">Copy the Editor folder from /SocketIt/Assets/Editor into your applications root directory.
+                This step is neccessary for Unity to activate the editor features.
+            </p>
+
+            <h2 id="events">Events</h2>
+            <p class="">Copy the Editor folder from /SocketIt/Assets/Editor into your applications root directory.
+                This step is neccessary for Unity to activate the editor features.
+            </p>
+
+            <h3>ModuleEvent</h3>
+            <h3>SnapEvent</h3>
+            <h3>CompositionEvent</h3>
+            <h3>SocketEvent</h3>
+            <h3>ConnectionEvent</h3>
+            <h3>OriginEvent</h3>
+
+            <h2 id="exceptions">Exceptions</h2>
+            <p class="">Copy the Editor folder from /SocketIt/Assets/Editor into your applications root directory.
+                This step is neccessary for Unity to activate the editor features.
+            </p>
+
+            <h2>Limitations</h2>
+
+            <dl class="dl-horizontal">
+                <dt>Multisocket connection</dt>
+                <dd>Two modules can be connected by one pair of sockets at a time.</dd>
+            </dl>
+
+            <h2 id="problems">Problems</h2>
+            <p class="">Copy the Editor folder from /SocketIt/Assets/Editor into your applications root directory.
+                This step is neccessary for Unity to activate the editor features.
+            </p>
         </div>
     </div>
-
-    <h2 id="prefabs">Prefabs</h2>
-    <p class="">Copy the Editor folder from /SocketIt/Assets/Editor into your applications root directory.
-        This step is neccessary for Unity to activate the editor features.
-    </p>
-
-    <h4 id="prefab-composition">Composition</h4>
-    <p class="">Copy the Editor folder from /SocketIt/Assets/Editor into your applications root directory.
-        This step is neccessary for Unity to activate the editor features.
-    </p>
-
-    <h4 id="prefab-composition-manager">CompositionManager</h4>
-    <p class="">Copy the Editor folder from /SocketIt/Assets/Editor into your applications root directory.
-        This step is neccessary for Unity to activate the editor features.
-    </p>
-
-    <h2 id="getting-started">Getting Started</h2>
-    <p class="">Copy the Editor folder from /SocketIt/Assets/Editor into your applications root directory.
-        This step is neccessary for Unity to activate the editor features.
-    </p>
-
-    <h2 id="snapping">Snapping</h2>
-    <p class="">Copy the Editor folder from /SocketIt/Assets/Editor into your applications root directory.
-        This step is neccessary for Unity to activate the editor features.
-    </p>
-
-    <h2 id="events">Events</h2>
-    <p class="">Copy the Editor folder from /SocketIt/Assets/Editor into your applications root directory.
-        This step is neccessary for Unity to activate the editor features.
-    </p>
-
-    <h2 id="exceptions">Exceptions</h2>
-    <p class="">Copy the Editor folder from /SocketIt/Assets/Editor into your applications root directory.
-        This step is neccessary for Unity to activate the editor features.
-    </p>
-
-    <h2 id="problems">Problems</h2>
-    <p class="">Copy the Editor folder from /SocketIt/Assets/Editor into your applications root directory.
-        This step is neccessary for Unity to activate the editor features.
-    </p>
 
     <footer class="footer">
         <p>&copy; 2017 Ephelion Labs</p>
